--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                <li class="mode">
                     <a href="#">
                         <i class="uil uil-moon"></i>
-                    <span class="link-name">Dark Mode</span>
+                    <span class="link-name">Modo Oscuro</span>
                 </a> 
         
                 <div class="mode-toggle">
